<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_depth_overlay</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="noelinnocent369@gmail.com">noel innocent</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>cv-bridge</exec_depend>
  <exec_depend>vision-msgs</exec_depend>
  <exec_depend>message-filters</exec_depend>
  <depend>yolo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
