<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_bench_d455</name>
  <version>0.1.0</version>
  <description>High-performance object tracking with depth information</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>yolo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>