[develop]
script_dir=$base/lib/yolo_bench_d455
[install]
install_scripts=$base/lib/yolo_bench_d455

[metadata]
name = yolo_bench_d455
version = 0.1.0
description = High-performance object tracking with depth information
author = Noel Innocent 
author_email = noelinnocent369@proton.me
maintainer = Noel Innocent, Ujjawal 
maintainer_email = noelinnocent369@proton.me
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    tracking_node = yolo_bench_d455.tracking_node:main
    visualization = yolo_bench_d455.visualization:main
    performance_monitor = scripts.performance_monitor:main
